--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-
-
 @import url("https://fonts.googleapis.com/css2?family=Monoton&family=Quicksand:wght@500;700&display=swap");
 
 * {
@@ -67,6 +65,10 @@ input {
   cursor: pointer;
 }
 
+input[type="text"] {
+  cursor: text;
+}
+
 .add-form button {
   text-transform: uppercase;
   background-color: #76c7ad;
@@ -76,7 +78,7 @@ input {
   background-color: #5a3e2b;
   color: #ffebb3;
   padding: 4rem 0;
-
+  overflow-y: auto;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
